# MAdLib-PyFR

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/2d-euler-vortex/: README.md  euler-adap.py
examples/2d-inc-cylinder/: README.md
examples/euler_vortex_2d/: README.md  euler-vortex.ini  euler_adap.py
examples/inc_cylinder_2d/: README.md  cylinder_adap.py  inc-cylinder-inst.json  inc-cylinder.ini  inc-cylinder.json
examples/ogv_blade_2d/: README.md  ogv-blade.ini  ogv-blade.json  ogv_adap.py
madlib/: CMakeLists.txt
madlib/Testcases/: CMakeLists.txt
madlib/Testcases/2dEulerVortex/: main.cc
madlib/Testcases/2dIncCylinder/: main.cc
madlib/Testcases/2dIncCylinderHO/: main.cc
madlib/Testcases/VTKProcessor/: main.cc
madlib_pyfr/: adaptation.py  adaptation_utils.py
mesh/: cylinder_mesh.py  mesh_utils.py  ogv_mesh.py  square_mesh.py
